force-app/main/default/objects/Idea__c/Idea__c.object-meta.xml
<CustomObject>
    <description>Created by BN
BWRD Users
To track BWRD Ideas
Created manually.</description>
    <label>Idea</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Idea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>