force-app/main/default/objects/Idea__c/fields/Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Count__c</fullName>
    <description>BN
BWRD
To calc total assessments
Roll Up Summary from Assessments</description>
    <label>Assessment Count</label>
    <summaryForeignKey>Assessment__c.Idea__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>