force-app/main/default/objects/Idea__c/fields/Average_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Assessment_Score__c</fullName>
    <description>BN
BWRD users
Formula to calculate the average assessment score</description>
    <formula>SUM_of_Assessment_Scores__c / Assessment_Count__c</formula>
    <label>Average Assessment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>