force-app/main/default/objects/Idea__c/fields/Competitive_Landscape__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Landscape__c</fullName>
    <description>BN
BWRD
To track an ideas information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Landscape</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>