force-app/main/default/objects/Idea__c/fields/Completed_Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Completed_Assessment_Count__c</fullName>
    <description>BN
Ventures Users
To track completed assessments in the compact layout</description>
    <label>Completed Assessment Count</label>
    <summaryFilterItems>
        <field>Assessment__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment__c.Idea__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>