force-app/main/default/objects/Idea__c/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <description>BN
BWRD
To track an idea&apos;s completion
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>