force-app/main/default/objects/Idea__c/fields/Key_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Key_Benefits__c</fullName>
    <description>BN
BWRD User
To track Idea information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>