force-app/main/default/objects/Idea__c/fields/Killed_Date__c.field-meta.xml
<CustomField>
    <fullName>Killed_Date__c</fullName>
    <description>BN
BWRD User
To track Idea kill information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Killed Date</label>
    <type>Date</type>
</CustomField>