force-app/main/default/objects/Idea__c/fields/Killed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Killed_Reason__c</fullName>
    <description>BN
BWRD User
To track Idea kill information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Killed Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>