force-app/main/default/objects/Idea__c/fields/Killed_Stage__c.field-meta.xml
<CustomField>
    <fullName>Killed_Stage__c</fullName>
    <description>BN
BWRD User
To track Idea kill information
Populated auto from process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Killed Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>