force-app/main/default/objects/Idea__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <defaultValue>&quot;Idea Submission&quot;</defaultValue>
    <description>BN
BWRD
To track what stage the idea is at
Populated manually</description>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idea Submission</fullName>
            </value>
            <value>
                <fullName>Idea Evaluation</fullName>
            </value>
            <value>
                <fullName>Funnel Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>