force-app/main/default/objects/Idea__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <description>BN
BWRD
To track an ideas information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pain Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>