force-app/main/default/objects/Idea__c/fields/Product_Traction__c.field-meta.xml
<CustomField>
    <fullName>Product_Traction__c</fullName>
    <description>BN
BWRD User
To track Idea information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Traction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>