force-app/main/default/objects/Idea__c/fields/Queue_Manager__c.field-meta.xml
<CustomField>
    <fullName>Queue_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BN
BWRD
To track who manages the idea queue
Populated manually</description>
    <label>Queue Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>