force-app/main/default/objects/Idea__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BN
BWRD
To connect an idea to a Contact that submitted it.
Populated manually</description>
    <label>Submitter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ideas</relationshipLabel>
    <relationshipName>Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>