force-app/main/default/objects/Idea__c/fields/SUM_of_Assessment_Scores__c.field-meta.xml
<CustomField>
    <fullName>SUM_of_Assessment_Scores__c</fullName>
    <description>BN
BWRD Users
Track avg scores of Completed Assessments
Auto pop from RUS</description>
    <label>SUM of Assessment Scores</label>
    <summarizedField>Assessment__c.Total_Weighted_Score__c</summarizedField>
    <summaryFilterItems>
        <field>Assessment__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment__c.Idea__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>