force-app/main/default/objects/Idea__c/fields/Target_Market__c.field-meta.xml
<CustomField>
    <fullName>Target_Market__c</fullName>
    <description>BN
BWRD
To track an ideas information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Market</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>