force-app/main/default/objects/Idea__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>BN
BWRD User
To track Idea information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Team</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>