force-app/main/default/objects/Idea__c/fields/Total_Possible_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Possible_Score__c</fullName>
    <description>BN
BWRD
Roll-up Summary field to display the Total Possible Score of Assessments on the Project</description>
    <label>Total Possible Score</label>
    <summarizedField>Assessment__c.Total_Possible_Score__c</summarizedField>
    <summaryForeignKey>Assessment__c.Idea__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>