force-app/main/default/objects/Idea__c/fields/Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Value_Proposition__c</fullName>
    <description>BN
BWRD User
To track Idea information
Populated manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Proposition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>