force-app/main/default/objects/Idea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Count__c</columns>
    <columns>Milestone__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Submitter__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>